--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	</head>
 	<body>
 		<p>Hello</p>
+		<marquee behavior="scroll" direction="left">this is melon362's cool website</marquee>
+
 	</body>
 </html>
