--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<p>Hello</p>
-		<marquee behavior="scroll" direction="left">this is melon362's cool website</marquee>
+		<marquee behavior="scroll" direction="left">this is melon362's</marquee>
+		<marquee behavior="scroll" direction="right">cool website</marquee>
 
 	</body>
 </html>
