--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<title>melon362's cool website</title>
 	</head>
 	<body>
-		<p>Hello</p>
+		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
 		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
 		<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
 	</body>
