--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
 	<head>
 		<title>melon362's cool website</title>
+		<style>
+			.bar{
+				width: 100%;
+				height 10%;
+			}
+		</style>
 	</head>
 	<body>
+		<div class="bar"></div>
 		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
 		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
 		<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
