--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 			.bar{
 				width: 100%;
 				height 10%;
+				background: red;
+				color: blue;
 			}
 		</style>
 	</head>
 	<body>
-		<div class="bar"></div>
+		<div class="bar">melon362</div>
 		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
 		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
 		<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
