--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 		</style>
 	</head>
 	<body>
-		<div class="bar">melon362</div>
+		<div class="bar">
+			<center>melon362</center>
+		</div>
 		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
 		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
 		<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
