--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="bar">
-			<center>melon362</center>
+			<a href="https://github.com/melon362"><center>melon362</center></a>
 		</div>
 		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
 		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
