--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 				font-size: 300%;
 				background: red;
 				color: blue;
-				font: Comic Sans;
+				font: Comic Sans MS;
 			}
 		</style>
 	</head>
