--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>melon362's cool website</title>
 		<style>
+			@font-face {
+			  font-family: 'Comic Sans MS';
+			  src: url('comic.tff');
+			}
 			.bar{
 				width: 100%;
 				font-size: 300%;
