--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<style>
 			@font-face {
 			  font-family: 'Comic Sans MS';
-			  src: url('comic.tff');
+			  src: url('comic.ttf');
 			}
 			.bar{
 				width: 100%;
