--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>melon362's cool website</title>
 		<style>
 			@font-face {
-			  font-family: 'Comic Sans MS';
-			  src: url('comic.ttf');
+				font-family: 'Comic Sans MS';
+				url('comic.woff') format('woff'), /* Modern Browsers */
+       				url('comic.ttf')  format('truetype'), /* Safari, Android, iOS */
 			}
 			.bar{
 				width: 100%;
