--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				font-size: 300%;
 				background: red;
 				color: blue;
-				font: Comic Sans MS;
+				font-family: Comic Sans MS;
 			}
 		</style>
 	</head>
