--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 				font-size: 300%;
 				background: red;
 				color: blue;
+			}
+			body{
 				font-family: Comic Sans MS;
 			}
 		</style>
@@ -21,8 +23,10 @@
 		<div class="bar">
 			<a href="https://github.com/melon362"><center>melon362</center></a>
 		</div>
-		<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
-		<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
-		<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
+		<div class="marquee">
+			<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
+			<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
+		</div>
 	</body>
 </html>
