--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 				background: red;
 				color: blue;
 			}
+			.marquee{
+				font-size: 30%;
+			}
 			body{
 				font-family: Comic Sans MS;
 			}
