--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>melon362's cool website</title>
+		<link rel="icon" href="./favicon.ico">
 		<style>
 			@font-face {
 				font-family: 'Comic Sans MS';
