--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>melon362's cool website</title>
 		<link rel="icon" href="./favicon.ico">
+		<link rel="stylesheet" href="./style.css">
 		<style>
 			@font-face {
 				font-family: 'Comic Sans MS';
