--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			<a href="https://github.com/melon362"><center>melon362</center></a>
 		</div>
 		<div class="marquee">
-			<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
-			<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
-			<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
+			<marquee behavior="scroll" direction="right" scrollamount="10"><center>Hello</center></marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10"><center>this is melon362's</center></marquee>
+			<marquee behavior="scroll" direction="right" scrollamount="10"><center>cool website</center></marquee>
 		</div>
 	</body>
 </html>
