--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="bar">
-			<a href="https://github.com/melon362"><center>melon362</center></a>
+			<center>melon362</center>
 		</div>
 		<div class="marquee">
 			<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
