--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 			<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
 			<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
 		</div>
+		<a href="github.com/melon362">melon362 on github</a>
 	</body>
 </html>
