--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 			<center>melon362</center>
 		</div>
 		<div class="marquee">
-			<marquee behavior="scroll" direction="right" scrollamount="10">Hello</marquee>
-			<marquee behavior="scroll" direction="left" scrollamount="10">this is melon362's</marquee>
-			<marquee behavior="scroll" direction="right" scrollamount="10">cool website</marquee>
+			<marquee behavior="scroll" direction="right" scrollamount="10">Hello this is melon362's</marquee>
+			<marquee behavior="scroll" direction="left" scrollamount="10">cool website</marquee>
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 	</body>
