--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 		<div class="bar">
 			<center>melon362</center>
 		</div>
-		<div class="marquee">
-			<marquee behavior="scroll" direction="right" scrollamount="10">Hello this is melon362's</marquee>
-			<marquee behavior="scroll" direction="left" scrollamount="10">cool website</marquee>
-		</div>
+		<h1>Hello there</h1>
+		<h1>this is melon362's</h1>
+		<h1>cool website</h1>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 	</body>
 </html>
