--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 		<div class="bar">
 			<center>melon362</center>
 		</div>
-		<h1>Hello there</h1>
-		<h1>this is melon362's</h1>
-		<h1>cool website</h1>
+		<div class="welcome">
+			<h1>Hello there</h1>
+			<h1>this is melon362's</h1>
+			<h1>cool website</h1>
+		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 	</body>
 </html>
