--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 			<h1>cool website</h1>
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
+		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
 	</body>
 </html>
