--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="welcome">
 			<h1>Hello there</h1>
 			<h1>this is melon362's</h1>
-			<h1>cool website</h1>
+			<h1>very cool website!</h1>
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
