--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>melon362's cool website</title>
 		<link rel="icon" href="./favicon.ico">
 		<link rel="stylesheet" href="./style.css">
+		<script src="./script.js"></script>
 	</head>
 	<body>
 		<div class="bar">
@@ -16,5 +17,6 @@
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
+		<textarea id="input"></textarea>
 	</body>
 </html>
