--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
 		<textarea id="input"></textarea>
-		<p></p>
+		<p id="text"></p>
 	</body>
 </html>
