--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>melon362's cool website</title>
 		<link rel="icon" href="./favicon.ico">
 		<link rel="stylesheet" href="./style.css">
-		<script src="./script.js"></script>
+		<script src="./script.js" defer></script>
 	</head>
 	<body>
 		<div class="bar">
