--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
-		<textarea id="input"></textarea>
+		<input type="text" id="input"></input>
 		<p id="text"></p>
 	</body>
 </html>
