--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
-		<p id="text"></p>
+		<p id="text">Type somthing in and press enter!</p>
 		<input type="text" id="input"></input>
 	</body>
 </html>
