--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
 		<p id="text">Type something in and press enter!</p>
 		<input type="text" id="input"></input>
+		<?php 
+			echo "PHP!"
+		?>
 	</body>
 </html>
