--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>melon362's cool website</title>
-		<link rel="icon" href="./favicon.ico">
+		<link rel="icon" href="./icons/favicon.png">
 		<link rel="stylesheet" href="./style.css">
 		<script src="./script.js" defer></script>
 	</head>
