--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 		</div>
 		<a id="mylinks" href="https://github.com/melon362">melon362 on github</a>
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
-		<p id="text">Type something in and press enter!</p>
-		<input type="text" id="input"></input>
-		<?php 
-			echo "PHP!"
-		?>
+		<p id="text"></p>
+		<input type="text" id="input" placeholder="Type something and press enter!"></input>
 	</body>
 </html>
