--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 		<a id="mylinks" href="https://codepen.io/melon362">melon362 on codepen</a>
 		<p id="text"></p>
 		<input type="text" id="input" placeholder="Type something and press enter!"></input>
+		<a href="./projects/spacebar/">Look at this cool spacebar counter I made!!!</a>
 	</body>
 </html>
