--- a/projects/spacebar/index.html
+++ b/projects/spacebar/index.html
@@ -12,5 +12,6 @@
                 </div>
 		<p id="text">You have hit spacebar 0 times</p>
 		<button id="save">Save</button>
+		<button id="reset">Reset</button>
 	</body>
 </html>
